--- a/index.Rmd
+++ b/index.Rmd
@@ -31,7 +31,7 @@ The data source was pulled from the website OpenIntro (an educational website) a
 
 The key dependent and independent variables we are examining are flip18 (whether or not the district flipped) and gerry (the level (low, mid, or high) that the district was gerrymandered. The dependent variable, the flip18 data, could have been collected through public election information from the 2016 and 2018 House Elections to determine whether or not the district had flipped parties. 
 
-As for the independent variable, the Washington Post article that is listed as the source for the dataset explains that the compactness of the district was used to determine how gerrymandered the district was. The compactness of the district was measured by how irregular the shape was: measuring the ratio of the area of the district to the area of a circle with the same perimeter. District boundary files from the Census were used to calculate these compactness scores for the 114th Congress. 
+As for the independent variable, the Washington Post article that is listed as the source for the dataset explains that the compactness of the district was used to determine how gerrymandered the district was. The compactness of the district was measured by how irregular the shape was: measuring the ratio of the area of the district to the area of a circle with the same perimeter. District boundary files from the Census were used to calculate these compactness scores for the 114th Congress. The research design is cross-sectional, as the data on gerrymandering for the district and the data on the House elections can be collected at the same time and the effects are measured at a single point in time (and not over time). The treatment is the gerrymandering effect on the elections.
 
 Below, the plot is a box plot that illustrates the number of districts that voted Democrat and the number of districts that voted Republican in the House elections in 2018. This offers insight into our dependent variable, whether or not the district flipped, as we can see quantify and visualize the number of districts that each party voted for taking into account our dependent variable of which districts had flipped; these are the effects after the gerrymandering that (potentially) affected the dependent variable. 
 
@@ -126,7 +126,9 @@ gof_map = c("nobs", "r.squared", "adj.r.squared")
 ```
 
 ## 4. Conclusion
-In general, the results prove the hypothesis correct when taking the percentages of the districts in a level of gerrymandering that flipped over the total number of districts in that level -- we see that the higher the level of gerrymandering, the less likely the district is to flip. However, when determining statistical significance through using the logistical regression, the hypothesis is only proven correct (and the null hypothesis rejected) for high gerrymandered districts since p = 0.021 and is therefore less than 0.05. This therefore means that, although the hypthesis holds true in terms of some of our data points, there are exceptions within our data that either disprove the hypothesis or do not show statistical significance in our data. 
+In general, the results prove the hypothesis correct when taking the percentages of the districts in a level of gerrymandering that flipped over the total number of districts in that level -- we see that the higher the level of gerrymandering, the less likely the district is to flip. 
+
+However, when determining statistical significance through using the logistical regression, the hypothesis is only proven correct (and the null hypothesis rejected) for high gerrymandered districts since p = 0.021 and is therefore less than 0.05. This therefore means that, although the hypthesis holds true in terms of some of our data points, there are exceptions within our data that either disprove the hypothesis or do not show statistical significance in our data. 
 
 The limitations to our analysis and the threats to inference are that:
 1. From looking at online data of the 2018 House elections, the popular vote flip and number of seats flip are generally proportional: the seats won by each party are generally also won by popular vote, which seems contrary to an effect of gerrymandering. This is true, however, the U.S. uses a first-past-the-post voting system, and in such a system, the seats won by each party and popular vote won by each party should NOT be proportional. 
